# sandbox

eos/contracts/: CMakeLists.txt
eos/contracts/emanatecolab/: CMakeLists.txt  emanatecolab.abi  emanatecolab.cpp  emanatecolab.hpp
eos/contracts/emanatecur/: emanatecur.cpp
eos/contracts/emancollab/: CMakeLists.txt  emancollab.cpp
eos/contracts/emancontent/: emancontent.cpp  emancontent.hpp
eos/contracts/moeda/: moeda.abi  moeda.cpp  moeda.hpp
eos/contracts/store/: store.abi  store.cpp
eos/scripts/: aliases  api.html  api_server.js  emanateApi.raml  package-lock.json  package.json  start_eos  test.js
